# zero2production

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230720073559_make_status_not_null_in_subscriptions.sql
scripts/: docker.sh  init_db.sh  migrate.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
